macro-template/tests/ui/err/empty_input_list.stderr
error: input list must contain at least one row
 --> tests/ui/err/empty_input_list.rs:5:19
  |
5 |         for Ty in [] {
  |                   ^^
