macro-template/tests/ui/err/empty_input_list.rs
use macro_template::template;

fn main() {
    template! {
        for Ty in [] {
            let _: Ty;
        }
    }
}
